@@ -3,7 +3,7 @@
  <import-step id="sc.contentrules.groupbydate-upgrades" version="20100702-01"
               handler="sc.contentrules.groupbydate.setuphandlers.doUpgrades"
               title="Do upgrades">
-  <dependency step="plone_content" />
+  <dependency step="rolemap" />
   Do upgrades
  </import-step>
 </import-steps>
