@@ -1,0 +1,32 @@
+# -*- coding: utf-8 -*-
+from zope import component
+import logging
+from Products.CMFCore.utils import getToolByName
+from Products.GenericSetup import interfaces as gsinterfaces
+from Products.GenericSetup.upgrade import listUpgradeSteps
+
+_PROJECT = 'sc.contentrules.groupbydate'
+_PROFILE_ID = 'sc.contentrules.groupbydate:default'
+
+def doUpgrades(context):
+    ''' If exists, run migrations
+    '''
+    if context.readDataFile('sc.contentrules.groupbydate.txt') is None:
+        return
+    logger = logging.getLogger(_PROJECT)
+    site = context.getSite()
+    setup_tool = getToolByName(site,'portal_setup')
+    version = setup_tool.getLastVersionForProfile(_PROFILE_ID)
+    upgradeSteps = listUpgradeSteps(setup_tool,_PROFILE_ID, version)
+    sorted(upgradeSteps,key=lambda step:step['sortkey'])
+    
+    for step in upgradeSteps:
+        oStep = step.get('step')
+        if oStep is not None:
+            oStep.doStep(setup_tool)
+            msg = "Ran upgrade step %s for profile %s" % (oStep.title,
+                                                          _PROFILE_ID)
+            setup_tool.setLastVersionForProfile(_PROFILE_ID, oStep.dest)
+            logger.info(msg)
+
+    
