@@ -1,0 +1,18 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:i18n="http://namespaces.zope.org/i18n"
+    i18n_domain="sc.contentrules.groupbydate">
+    
+    <!-- Upgrades-->
+    <genericsetup:upgradeStep
+        title="Upgrade for sc.contentrules.groupbydate"
+        description=""
+        source="0.0"
+        destination="1.0"
+        sortkey="1"
+        handler="sc.contentrules.groupbydate.upgrades.to01.upgrade0to1"
+        profile="sc.contentrules.groupbydate:default" />
+        
+</configure>
